# gitrev

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Example.hs  LICENSE  README.md  cabal.project  flake.nix  gitrev-typed.cabal  gitrev.cabal  hie.yaml  stack.yaml
.github/scripts/: run_example.sh  run_example_cabal_build.sh  run_example_cabal_install.sh  run_example_nix.sh  run_example_stack_build.sh  run_example_stack_install.sh
.github/workflows/: ci.yaml
docs/: CHANGELOG.md  Development-GitRev-Typed-OsString.html  Development-GitRev-Typed.html  Development-GitRev-Utils-Environment.html  Development-GitRev-Utils-Git.html  Development-GitRev-Utils-LookupEnv.html  Development-GitRev-Utils.html  Development-GitRev.html  doc-index.html  doc-index.json  gitrev.haddock  index.html
docs/src/: Development.GitRev.Typed.OsString.html  Development.GitRev.Typed.html  Development.GitRev.Utils.Environment.html  Development.GitRev.Utils.Git.html  Development.GitRev.Utils.LookupEnv.html  Development.GitRev.Utils.html  Development.GitRev.html
doctests/: Main.hs  gitrev-doctest.cabal
example/: Main.hs  TH.hs  example.cabal
example/TH/: OsString.hs
lib/gitrev/: README.md  gitrev.cabal
lib/gitrev-internal/: CHANGELOG.md  LICENSE  README.md  gitrev-internal.cabal
lib/gitrev-internal/src/Development/GitRev/Internal/: Environment.hs  Git.hs  OsString.hs  QFirst.hs  Utils.hs
lib/gitrev-internal/src/Development/GitRev/Internal/Environment/: OsString.hs
lib/gitrev-internal/src/Development/GitRev/Internal/Git/: Common.hs  OsString.hs
lib/gitrev-internal/src/Development/GitRev/Internal/Utils/: Common.hs  OsString.hs
lib/gitrev/src/Development/: GitRev.hs
lib/gitrev/src/Development/GitRev/: Typed.hs
lib/gitrev/src/Development/GitRev/Typed/: OsString.hs
lib/gitrev/test/unit/: Main.hs  Utils.hs
lib/gitrev/test/unit/Unit/Development/: GitRev.hs
lib/gitrev/test/unit/Unit/Development/GitRev/: Typed.hs
lib/gitrev/test/unit/Unit/Development/GitRev/Typed/: OsString.hs
scripts/: doctest.sh  haddock.sh
src/Development/: GitRev.hs
src/Development/GitRev/: Internal.hs  Typed.hs  Utils.hs
src/Development/GitRev/Internal/: Environment.hs  Git.hs  OsString.hs  QFirst.hs  Utils.hs
src/Development/GitRev/Internal/Environment/: OsString.hs
src/Development/GitRev/Internal/Git/: Common.hs  OsString.hs
src/Development/GitRev/Internal/Utils/: Common.hs  OsString.hs
src/Development/GitRev/Typed/: OsString.hs
src/Development/GitRev/Utils/: Environment.hs  Git.hs  LookupEnv.hs  OsString.hs
src/Development/GitRev/Utils/Environment/: OsString.hs
src/Development/GitRev/Utils/Git/: Internal.hs  OsString.hs
test/doctest/: Main.hs
test/unit/: Main.hs  Utils.hs
test/unit/Unit/Development/: GitRev.hs
test/unit/Unit/Development/GitRev/: Typed.hs
test/unit/Unit/Development/GitRev/Typed/: OsString.hs
