cabal-version: 2.2
name:          gitrev
version:       1.4.0
synopsis:      Compile git revision info into Haskell projects
homepage:      https://github.com/acfoltzer/gitrev
license:       BSD-3-Clause
license-file:  LICENSE
author:        Adam C. Foltzer
maintainer:    acfoltzer@galois.com
category:      Development
build-type:    Simple
tested-with:
  GHC ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

description:
  Some handy Template Haskell splices for including the current git hash and branch in the code of your project. Useful for including in panic messages, @--version@ output, or diagnostic info for more informative bug reports.

source-repository head
  type:     git
  location: https://github.com/tbidne/gitrev.git

common common-lang
  default-extensions:
    DeriveLift
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings

  default-language:   Haskell2010

library
  import:          common-lang
  build-depends:
    , base              >=4.15.0.0 && <4.22
    , directory         >=1.3.8.0  && <1.4
    , file-io           ^>=0.1.1
    , filepath          >=1.5.2.0  && <1.6
    , os-string         ^>=2.0.0
    , process           >=1.6.13.2 && <1.7
    , template-haskell  >=2.17.0.0 && <2.24
    , text              >=2.0.1    && <2.2

  hs-source-dirs:  src
  exposed-modules:
    Development.GitRev
    Development.GitRev.Internal
    Development.GitRev.Typed

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , gitrev
    , tasty        >=1.1.0.3 && <1.6
    , tasty-hunit  >=0.9     && <0.11

  hs-source-dirs: test/unit
