cabal-version:      2.2
name:               gitrev
version:            2.0
synopsis:           Compile git revision info into Haskell projects
homepage:           https://github.com/tbidne/gitrev
license:            BSD-3-Clause
license-file:       LICENSE
author:             Adam C. Foltzer
maintainer:         tbidne@protonmail.com
category:           Development
build-type:         Simple
tested-with:
  GHC ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

extra-source-files:
  cabal.project
  LICENSE
  README.md

extra-doc-files:    CHANGELOG.md
description:
  Some handy Template Haskell splices for including the current git hash and
  branch in the code of your project. Useful for including in panic messages,
  @--version@ output, or diagnostic info for more informative bug reports.

source-repository head
  type:     git
  location: https://github.com/tbidne/gitrev.git

common common-lang
  default-extensions:
    DeriveLift
    DerivingStrategies
    ExplicitForAll
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    TupleSections

  default-language:   Haskell2010

library
  import:          common-lang
  build-depends:
    , base              >=4.15.0.0 && <4.22
    , directory         >=1.3.8.0  && <1.4
    , file-io           ^>=0.1.1
    , filepath          >=1.5.2.0  && <1.6
    , os-string         ^>=2.0.0
    , process           >=1.6.13.2 && <1.7
    , template-haskell  >=2.17.0.0 && <2.24
    , text              >=2.0.1    && <2.2

  hs-source-dirs:  src
  exposed-modules:
    Development.GitRev
    Development.GitRev.Typed
    Development.GitRev.Utils
    Development.GitRev.Utils.Environment
    Development.GitRev.Utils.Git

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Utils
  build-depends:
    , base
    , gitrev
    , tasty             >=1.1.0.3 && <1.6
    , tasty-hunit       >=0.9     && <0.11
    , template-haskell

  hs-source-dirs: test/unit
  ghc-options:    -threaded

test-suite doctest
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , doctest-parallel  ^>=0.3
    , env-guard         ^>=0.2
    , gitrev

  hs-source-dirs: test/doctest
  ghc-options:    -threaded

-- NOTE: For a while, running doctests would give some maddening error about
-- not being able to find a directory in ~/.cache/hie-bios. I encountered this
-- with both doctest and doctest-parallel.
--
-- It __seemed__ that adding -threaded to the ghc-options fixed it. I say
-- "seemed" because
--
--   1. doctest continued to fail; only doctest-parallel was "fixed".
--   2. doctest-parallel continuted to work even after __removing__ -threaded!
--
-- So, I don't know. That said, the non-threaded runtime is known to have
-- correctness issues. It was for that reason that a proposal to make -threaded
-- the default was accepted:
--
--     https://github.com/ghc-proposals/ghc-proposals/pull/240
--
-- It appears this has not been implemented, however:
--
--     https://gitlab.haskell.org/ghc/ghc/-/merge_requests/538
--
-- Therefore we enable -threaded, as it might fix an issue here, and it should
-- probably be enabled regardless.
