cabal-version:      2.2
name:               gitrev
version:            2.0
synopsis:           Compile git revision info into Haskell projects
homepage:           https://github.com/tbidne/gitrev
license:            BSD-3-Clause
license-file:       LICENSE
author:             Adam C. Foltzer
maintainer:         tbidne@protonmail.com
category:           Development
build-type:         Simple
tested-with:
  GHC ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

extra-source-files:
  cabal.project
  LICENSE
  README.md

extra-doc-files:    CHANGELOG.md
description:
  Some handy Template Haskell splices for including the current git hash and
  branch in the code of your project. Useful for including in panic messages,
  @--version@ output, or diagnostic info for more informative bug reports.

source-repository head
  type:     git
  location: https://github.com/tbidne/gitrev.git

common common-lang
  default-extensions:
    DeriveFunctor
    DeriveLift
    DerivingStrategies
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    TupleSections
    TypeApplications

  default-language:   Haskell2010

library
  import:          common-lang
  build-depends:
    , base              >=4.15.0.0 && <4.22
    , directory         >=1.3.8.0  && <1.4
    , file-io           ^>=0.1.1
    , filepath          >=1.5.2.0  && <1.6
    , os-string         ^>=2.0.0
    , process           >=1.6.13.2 && <1.7
    , template-haskell  >=2.17.0.0 && <2.24
    , text              >=2.0.1    && <2.2

  hs-source-dirs:  src
  exposed-modules:
    Development.GitRev
    Development.GitRev.Typed
    Development.GitRev.Utils
    Development.GitRev.Utils.Environment
    Development.GitRev.Utils.Git

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Utils
  build-depends:
    , base
    , gitrev
    , tasty             >=1.1.0.3 && <1.6
    , tasty-hunit       >=0.9     && <0.11
    , template-haskell

  hs-source-dirs: test/unit
  ghc-options:    -threaded
