cabal-version:      2.2
name:               gitrev-internal
version:            0.1
synopsis:           Internal package for gitrev
homepage:           https://github.com/tbidne/gitrev
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
category:           Development
build-type:         Simple
tested-with:
  GHC ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

extra-source-files:
  LICENSE
  README.md

extra-doc-files:    CHANGELOG.md
description:
  This is an internal package for gitrev, intended primarily for exposing
  functions for doctests.

source-repository head
  type:     git
  location: https://github.com/tbidne/gitrev.git

common common-lang
  default-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications

  default-language:   Haskell2010

library
  import:          common-lang
  build-depends:
    , base              >=4.15.0.0 && <4.22
    , directory         >=1.3.8.0  && <1.4
    , exceptions        ^>=0.10.4
    , file-io           ^>=0.1.1
    , filepath          >=1.5.2.0  && <1.6
    , os-string         ^>=2.0.0
    , process           >=1.6.13.2 && <1.7
    , template-haskell  >=2.17.0.0 && <2.24
    , text              >=2.0.1    && <2.2

  hs-source-dirs:  src
  exposed-modules:
    Development.GitRev.Internal.Environment
    Development.GitRev.Internal.Environment.OsString
    Development.GitRev.Internal.Git
    Development.GitRev.Internal.Git.Common
    Development.GitRev.Internal.Git.OsString
    Development.GitRev.Internal.OsString
    Development.GitRev.Internal.QFirst
    Development.GitRev.Internal.Utils
    Development.GitRev.Internal.Utils.Common
    Development.GitRev.Internal.Utils.OsString
